# go-study

./: .dir-locals.el  BUILD  MODULE.bazel  WORKSPACE  blink.go  go.mod  go.sum  main.go  print_fortune.go
fortune/: BUILD  fortune.go  fortune_test.go
mymodule/: BUILD.bazel  mymodule.go
