###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
bazel_dep(
    name = "rules_go",
    version = "0.47.0",
)
bazel_dep(
    name = "gazelle",
    version = "0.39.0",
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

#go_sdk.from_file(go_mod = "//:go.mod")
go_sdk.download(version = "1.22.6")
go_sdk.download(
    goarch = "amd64",
    goos = "linux",
    version = "1.23.1",
)
go_sdk.download(
    goarch = "arm64",
    goos = "linux",
    version = "1.23.1",
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_gogo_protobuf",
    "com_github_stretchr_testify",
    "io_periph_x_conn_v3",
    "io_periph_x_host_v3",
)
