# MODULE.bazel

module(
    name = "go-study",
    version = "0.0.1",
)

# 1. Upgrade to a modern version of rules_go that has full Bzlmod support.
bazel_dep(
    name = "rules_go",
    version = "0.50.1",
    # repo_name = "io_bazel_rules_go",
)
bazel_dep(
    name = "gazelle",
    version = "0.43.0",  # A version compatible with the newer rules_go
    # repo_name = "com_github_bazelbuild_bazel_gazelle",
)

# 2. Import the modern 'go' extension.
# This single extension handles both the SDK and dependencies.
go_sdk = use_extension(
    "@rules_go//go:extensions.bzl",
    "go_sdk",
)
go_sdk.download(version = "1.22.6")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
# 3. Tell the extension to manage dependencies from your go.mod file.
#bazel_dep(
#    go_mod = "//:go.mod",
#    go_version = "1.22",
#)

# 4. Make the Go SDK and the Go dependencies visible to your project.
use_repo(
    go_deps,
    "io_periph_x_conn_v3",
    "io_periph_x_host_v3",
)
